@@ -1,3 +1,7 @@
+Mon Nov  7 17:36:34 1994  Giuseppe Attardi  <attardi@omega>
+
+	* machine.H: #undef STACK_GROWS_DOWNWARD for hp pa architecture
+
 Thu Oct 27 12:26:20 1994  Giuseppe Attardi  (attardi@omega)
 
 	* cmm.H: renamed STATIC_0 as DATASTART
